Update _layouts/home.html && _sass/elements.scss - title logo

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -16,11 +16,11 @@ layout: compress
         <div class="container animated fadeIn">
             <div class="row">
                     <a href="{{ site.url }}">
-                        <img src="{{ site.logo }}" class="animated rotateIn">
+                        <img src="{{ site.logo }}" class="img-square">
                     </a>
                     <h3 class="title">
                         <a class="zoombtn" href="{{ site.url }}">
-                        	<p style="font-size:1.2rem;font-weight:300">{{ site.title }}</p>
+                        	<p style="font-size:1.2rem;font-weight:300;visibility:hidden;">{{ site.title }}</p>
 			            </a>
                     </h3>
                     <hr class="hr-line">
