Update _layouts/home.html && _sass/elements.scss - title logo

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -18,7 +18,7 @@ layout: compress
                     <a href="{{ site.url }}">
                         <img src="{{ site.logo }}" class="img-square">
                     </a>
-                    <h3 class="title">
+                    <h3 class="title" style="visibility:hidden;">
                         <a class="zoombtn" href="{{ site.url }}">
                         	<p style="font-size:1.2rem;font-weight:300;visibility:hidden;">{{ site.title }}</p>
 			            </a>
