Update _layouts/home.html - disable title

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -18,11 +18,11 @@ layout: compress
                     <a href="{{ site.url }}">
                         <img src="{{ site.logo }}" class="img-square">
                     </a>
-                    <h3 class="title" style="visibility:hidden;">
+                    <!-- <h3 class="title" style="visibility:hidden;">
                         <a class="zoombtn" href="{{ site.url }}">
                         	<p style="font-size:1.2rem;font-weight:300;visibility:hidden;">{{ site.title }}</p>
 			            </a>
-                    </h3>
+                    </h3> -->
                     <hr class="hr-line">
                     <h3 class="title">
                         <a href="{{ site.url }}">
