--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -41,8 +41,11 @@ layout: compress
                          <a class="btn zoombtn" href="{{ site.url }}/posts">
                          Posts
                          </a>
-                         <a class="btn zoombtn" href="{{ site.url }}/projects">
+                         <!-- <a class="btn zoombtn" href="{{ site.url }}/projects">
                          Projects
+                         </a> -->
+                         <a class="btn zoombtn" href="{{ site.url }}/ressources">
+                         Ressources
                          </a>
                  </h3>
             </div>
