--- a/_layouts/ressources.html
+++ b/_layouts/ressources.html
@@ -22,7 +22,7 @@ layout: compress
                     </a>
                 </div>
                 <div class="post-list">
-                    {% for post in site.ressources %} 
+                    {% for post in site.posts %} 
                         {% if post.ressources %}
                     <ul>
                         <li class="wow fadeInLeft" data-wow-duration="1.5s">
