--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -27,6 +27,9 @@ layout: compress
                     {% if page.project %}
                     <a class="btn zoombtn" href="{{site.url}}/projects/">
                     {% else %}
+                    {% if page.ressources %}
+                    <a class="btn zoombtn" href="{{site.url}}/projects/">
+                    {% else %}
                     <a class="btn zoombtn" href="{{site.url}}/posts/">
                     {% endif %}
                         <i class="fa fa-chevron-left"></i>
